--- a/client/src/components/dashboard/UsersPosts/PublishedPosts/published.module.css
+++ b/client/src/components/dashboard/UsersPosts/PublishedPosts/published.module.css
@@ -223,3 +223,8 @@
     font-weight: 900;
     font-size: 1.3rem;
 }
+.comentFlex{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
