--- a/client/src/components/dashboard/UserQuestions/userQuestion.module.css
+++ b/client/src/components/dashboard/UserQuestions/userQuestion.module.css
@@ -22,6 +22,7 @@ body{
 }
 .question__grid{
     display: grid;
+    position: relative;
 }
 @media(min-width: 768px){
     .question__grid {
@@ -208,4 +209,34 @@ body{
 .answer__text{
     max-width: 190px;
     display: block;
+}
+
+.divInput{
+    width: 100%;
+    margin: 0 auto;
+}
+.inputSearch{
+    width: 60%;
+    margin: 1rem auto;
+    display: block;
+    border: 1px solid #ddd;
+    padding: 0.5rem;
+    border-radius: 5px;
+    background: #e1e3e7;
+}
+.div_NoResults{
+    text-align: center;
+    margin: 1rem 0;
+    position: absolute;
+    width: 100%;
+
+}
+.title_NoResults{
+    margin: 0 auto;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 900;
+    font-size: 1.2rem;
 }
