bug fix checkbox

--- a/client/src/components/dashboard/UsersPosts/PublishedPosts/published.module.css
+++ b/client/src/components/dashboard/UsersPosts/PublishedPosts/published.module.css
@@ -228,3 +228,17 @@
     display: flex;
     justify-content: space-between;
 }
+.div_NoResults{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+
+}
+.title_NoResults{
+    text-align: center;
+    display: block;
+    font-weight: 900;
+    font-size: 1.3rem;
+}
