--- a/client/src/views/ForumView/Foro.module.css
+++ b/client/src/views/ForumView/Foro.module.css
@@ -1,178 +1,171 @@
 body html {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 @font-face {
-    font-family: 'MiFuenteBold';
-    src: url('../../fonts/VisbyRoundCF-Bold.otf');
+  font-family: "MiFuenteBold";
+  src: url("../../fonts/VisbyRoundCF-Bold.otf");
 }
 :root {
-    --color-primario:#0f3054;
-    --color-secundario: #30306d;
-    --color-terciario:#005692;
-    --color-cuartiario:#a4d4ff;
-    --color-quintario:#ea9642;
-  }
+  --color-primario: #0f3054;
+  --color-secundario: #30306d;
+  --color-terciario: #005692;
+  --color-cuartiario: #a4d4ff;
+  --color-quintario: #ea9642;
+}
 
-.containerCenter{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    min-height: 100vh;
-    height: 100vh;
-    width: 100vw;
+.containerCenter {
+  display: flex;
+  flex-direction: row;
+  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
 }
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 6rem;
-    padding: 10px;
-    height: 100vh;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 6rem;
+  padding: 10px;
+  height: 100vh;
+  min-height: 100vh;
 }
-.contain h4{
-    font-family: 'MiFuenteBold';
-    margin: 10px;
+.contain h4 {
+  font-family: "MiFuenteBold";
+  margin: 10px;
 }
-.titleCenter{
-    font-family: 'MiFuenteBold';
-    font-weight: bold;  
-    color: black;
-    margin: 0.6rem;
-   }
+.titleCenter {
+  font-family: "MiFuenteBold";
+  font-weight: bold;
+  color: black;
+  margin: 0.6rem;
+}
 
-.contain:hover{
-    transition: 0.3s;
+.contain:hover {
+  transition: 0.3s;
 }
 .contain {
-    display: flex;
-    flex-direction: column;
-    align-items: star;
-    justify-content: center;
-    border-left:#0055927b solid 1px ;
-    transition: 0.5s;   
-    border-radius: 10px;
-    background: var(--color-cuartiario);
-    box-shadow: -1px 1px 8px rgba(55, 172, 255, 0.064);
-    width: 50vw;
-    min-width: 50vw;
-    max-width: 50vw;
-    margin: 0.7rem;
-    
+  display: flex;
+  flex-direction: column;
+  align-items: star;
+  justify-content: center;
+  border-left: #0055927b solid 1px;
+  transition: 0.5s;
+  border-radius: 10px;
+  background: var(--color-cuartiario);
+  box-shadow: -1px 1px 8px rgba(55, 172, 255, 0.064);
+  width: 50vw;
+  min-width: 50vw;
+  max-width: 50vw;
+  margin: 0.7rem;
 }
-.contain button:hover{
-    background: var(--color-terciario);
-    transition: 0.3s;
+.contain button:hover {
+  background: var(--color-terciario);
+  transition: 0.3s;
 }
-.contain h1{
-    display: flex;
-    border: 1px solid #00559226;
-    justify-content: center;
-    align-items: center;
-    width: 50vw;
-    padding: 0.6rem;
-    border-radius: 5px 5px 0 0;
-    background-color: #0f3054;
-    color: #FFF;
-    overflow: auto;
+.contain h1 {
+  display: flex;
+  border: 1px solid #00559226;
+  justify-content: center;
+  align-items: center;
+  width: 50vw;
+  padding: 0.6rem;
+  border-radius: 5px 5px 0 0;
+  background-color: #0f3054;
+  color: #fff;
+  overflow: auto;
 }
-.contain button{
-    display: flex;
-    flex-direction: row;
-    border: none !important;
-    align-items: center;
-    height: 5vh;
-    padding: 0.4rem; 
-    margin-top: 1rem;
-    font-size: 0.9rem;
-    background: var(--blue_color);
-    border-radius: 5px;
-    transition: 0.3s;
-    color: #FFF;
-    cursor: pointer; 
-
+.contain button {
+  display: flex;
+  flex-direction: row;
+  border: none !important;
+  align-items: center;
+  height: 5vh;
+  padding: 0.4rem;
+  margin-top: 1rem;
+  font-size: 0.9rem;
+  background: var(--blue_color);
+  border-radius: 5px;
+  transition: 0.3s;
+  color: #fff;
+  cursor: pointer;
 }
 
-.contain button:hover{
-    background: #034879;
-
+.contain button:hover {
+  background: #034879;
 }
 
 .anwers {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: end;
-    width: 100%;
-    background-color:#0f3054;
-    border-radius: 0 0px 5px 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: end;
+  width: 100%;
+  background-color: #0f3054;
+  border-radius: 0 0px 5px 5px;
 }
-.anwers p{
-    margin: 0.5rem;
-    font-size: 0.8rem;
-    color: #a8a8a8;
+.anwers p {
+  margin: 0.5rem;
+  font-size: 0.8rem;
+  color: #a8a8a8;
 }
 .div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.center{
-    display: flex;
-    flex-direction: column;
+.center {
+  display: flex;
+  flex-direction: column;
 }
-.center p{
-    padding: 0.5rem;
-    font-size: 1.3rem;
-}
-
-.centerLoading{
-    width:70vw;
-    display: flex;
-    flex-direction: column;
-    align-items:  center;
-    height: 100vh;
-
-}
-.loading{
-    margin: 1.1rem;
-}
-.centerLoading h3{
-    margin: 1.5rem;
+.center p {
+  padding: 0.5rem;
+  font-size: 1.3rem;
 }
 
-@media (max-width: 575.98px) {  
- .center h1{
-    width:80vw;
+.centerLoading {
+  width: 70vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+.loading {
+  margin: 1.1rem;
+}
+.centerLoading h3 {
+  margin: 1.5rem;
+}
+
+@media (max-width: 575.98px) {
+  .center h1 {
+    width: 80vw;
     max-width: 88vw;
     font-size: 1.4rem;
     padding: 0.5rem;
- }
- .container{
+  }
+  .container {
     margin: auto;
- }
- .center p{
-     margin-left: 0.9rem;
-     font-size: 0.8rem;
- }
+  }
+  .center p {
+    margin-left: 0.9rem;
+    font-size: 0.8rem;
+  }
 }
-@media (max-width: 768px){
-    .containerCenter{
-        display: flex;
-        flex-direction: column;
-    }
-    .contain{
-        margin: 20px;
-        max-width: 80vw;
-        min-width: 80vw;
-        /* height: 100vh; */
-    }
-    .center{
-        width: 70vw;
-        max-width: 70vw;   
-        min-width: 70vw;
-        
-    }
-
+@media (max-width: 768px) {
+  .containerCenter {
+    display: flex;
+    flex-direction: column;
+  }
+  .contain {
+    margin: 20px;
+    max-width: 80vw;
+    min-width: 80vw;
+    /* height: 100vh; */
+  }
+  .center {
+    width: 70vw;
+    max-width: 70vw;
+    min-width: 70vw;
+  }
 }
