--- a/client/src/components/Posts/posts.module.css
+++ b/client/src/components/Posts/posts.module.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: solid blue
 }
 
     .Cards {
@@ -14,7 +15,6 @@
         height: 100%;
         flex-direction: column;
         overflow: scroll;
-        padding: 20px;
         padding-top: 0;
     }
 
