cantidad de comentarios en la card

--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -47,6 +47,7 @@
             justify-content: center;
             margin-bottom: 2px;
             padding-bottom: 2px; 
+            line-height: 0.9em;
         }
    
             .organizationName {
