--- a/client/src/components/LeftBar/leftBar.module.css
+++ b/client/src/components/LeftBar/leftBar.module.css
@@ -1,6 +1,6 @@
 .LeftBar {
     width: 30%;
-    max-height: 100%;
+    min-height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
