--- a/client/src/views/QuestionView/QuestionDetail.module.css
+++ b/client/src/views/QuestionView/QuestionDetail.module.css
@@ -19,8 +19,12 @@
   align-items: center;
   min-height: 4vh;
   max-height: 4vh;
-  font-size: 0.65rem;
+  font-size: 0.6rem;
   color: red;
+}
+.errores h3{
+  color: red;
+
 }
 
 .title h2 {
@@ -77,7 +81,6 @@
 }
 .container h3 {
   font-family: "FuenteBold";
-  color: #000000;
 }
 .container label {
   margin: 1rem;
@@ -263,7 +266,6 @@
 }
 .comments h3 {
   font-size: 0.8rem;
-  color: #042685;
   margin-left: 0;
 }
 .comments h4 {
