--- a/client/src/views/ForumView/Foro.module.css
+++ b/client/src/views/ForumView/Foro.module.css
@@ -21,7 +21,12 @@ body html {
   height: 100vh;
   width: 100vw;
 }
-
+.centerLoading{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .container {
     height: 80vh;
     overflow-y: auto;  
